some validator fixes
first one, more to go

--- a/category.html
+++ b/category.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nb">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Marte Lilleberre">
+    <meta name="description" content="Her finner du blog innlegg som matcher kaegorien du valgte">
+    <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog, kategori">
     <title>Fenty.no - Category: </title>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,10 +21,12 @@
 
 <body>
 
-    <head>
+    <header>
         <div class="header-image">
             <!-- <img src="img/header-image-2.png" alt="fenty.no"> -->
-            <h1 class="site-name-placeholder">FENTY.NO</h1>
+            <a href="index.html">
+                <h1 class="site-name-placeholder">FENTY.NO</h1>
+            </a>
             <p>Få de aller siste nyhetene on Rihannas utgivelser</p>
         </div>
         <div class="nav-container">
@@ -42,7 +47,7 @@
             </nav>
             <div class="hamburger-menu"><i class="fa-solid fa-bars fa-2xl" style="color: #FFF;"></i></div>
         </div>
-    </head>
+    </header>
     <h1 class="news-and-content">Kategori: </h1>
     <main>
         <div class="blog-content">
