--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nb">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Marte Lilleberre">
+    <meta name="description"
+        content="Velkommen til Fenty Norge. Her finner du alt om Rihannas varemerker og lanseringer, i tillegg til nyheter om Rihanna">
+    <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog">
     <title>Fenty.no</title>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +22,7 @@
 
 <body>
 
-    <head>
+    <header>
         <div class="header-image">
             <!-- <img src="img/header-image-2.png" alt="fenty.no"> -->
             <h1 class="site-name-placeholder">FENTY.NO</h1>
@@ -42,11 +46,11 @@
             </nav>
             <div class="hamburger-menu"><i class="fa-solid fa-bars fa-2xl" style="color: #FFF;"></i></div>
         </div>
-    </head>
+    </header>
     <div class="site-info-container">
         <div class="site-info">
             <div class="left-info-image">
-                <img src="/img/RIHANNAnm.jpg">
+                <img src="/img/RIHANNAnm.jpg" alt="image of Rihanna">
             </div>
             <div class="center-site-info">
                 <img class="scroll-down" src="/img/skroll-ned.png">
@@ -64,11 +68,11 @@
                 </div>
                 <div class="carousel-arrow-content">
                     <div class="left-arrow .disabled-arrow">
-                        <img src="/img/icons/arrow-left.png">
+                        <img src="/img/icons/arrow-left.png" alt="arrow left">
                     </div>
                     <div class="new-blog-post-carousel"></div>
                     <div class="right-arrow .disabled-arrow">
-                        <img src="/img/icons/arrow-right.png">
+                        <img src="/img/icons/arrow-right.png" alt="arrow rigth">
                     </div>
                 </div>
             </div>
@@ -235,7 +239,7 @@
             </div>
             <div class="sidebar">
                 <div class="filter-posts">
-                    <img src="/img/instagram-header.png">
+                    <img src="/img/instagram-header.png" alt="image of Rihanna">
                     <h2>Filtrer Innlegg:</h2>
                     <div class="horizontal-line"></div>
                     <div class="filter-posts-by">
