--- a/single-post.html
+++ b/single-post.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nb">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Marte Lilleberre">
+    <meta name="description"
+        content="Velkommen til Fenty Norge. Her finner du blog innlegg om Rihannas varemerker og lanseringer, i tillegg til nyheter om Rihanna">
+    <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, savagex, blog">
     <title>Fenty.no - blog post</title>
     <link rel="stylesheet" href="/css/index.css">
     <script type="module" src="/js/Pages.js/singlePost.js"></script>
@@ -17,10 +21,12 @@
 
 <body>
 
-    <head>
+    <header>
         <div class="header-image">
             <!-- <img src="" alt=""> -->
-            <h1 class="site-name-placeholder">FENTY.NO</h1>
+            <a href="index.html">
+                <h1 class="site-name-placeholder">FENTY.NO</h1>
+            </a>
         </div>
         <div class="nav-container">
             <nav class="main-menu">
@@ -40,44 +46,11 @@
             </nav>
             <div class="hamburger-menu"><i class="fa-solid fa-bars fa-2xl" style="color: #FFF;"></i></div>
         </div>
-    </head>
+    </header>
     <main>
         <div class="single-blogpost-container">
             <div class="single-blogpost-content">
                 <div class="loader">Loading..</div>
-
-                <!-- <img class="main-post-img" src="/img/rih.jpeg.jpg">
-            <div class="breadcrumbs">
-                <p>Home / Fenty skin / This is the blog post</p>
-            </div>
-            <h1>THIS IS THE POST TITLE</h1>
-            <div class="single-blog-post-info">
-                <div class="author">
-                    <p>Posted by: Marte</p>
-                </div>
-                <div class="dateandtime">
-                    <p>January 16th 2024 15:45</p>
-                </div>
-                <div class="comments">
-                    <p>5 comments</p>
-                </div>
-            </div>
-            <div class="single-blog-post-text">
-                <p>TLorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean finibus justo orci, vitae
-                    placerat nulla aliquam vitae. Cras luctus vulputate malesuada. Integer pellentesque quam eu
-                    nulla suscipit fermentum. Maecenas a augue non nunc fringilla dignissim. Donec lacinia velit
-                    in tristique luctus. Aenean bibendum mattis lorem pretium finibus. Vestibulum at feugiat
-                    dui. Praesent in mi ut sem congue sollicitudin ut sed orci. Morbi quis tempus orci.
-                    Pellentesque varius risus in neque interdum, nec egestas dui molestie. Lorem ipsum dolor sit
-                    amet, consectetur adipiscing elit. Mauris eu mauris imperdiet arcu finibus lacinia.
-                    Suspendisse mauris ante, cursus eget faucibus at, dapibus in orci.
-                    Maecenas commodo pellentesque dolor vitae maximus. Nullam eget dolor eget neque fermentum
-                    semper et vel neque. Aenean interdum accumsan enim a maximus. Suspendisse potenti.
-                    Pellentesque aliquam, turpis eu elementum aliquam, tortor est</p>
-            </div>
-            <div class="category">
-                <p>Category: Fenty Skin</p>
-            </div> -->
             </div>
             <dialog>
                 <!-- <button autofocus>Close</button>
