--- a/fenty-beauty.html
+++ b/fenty-beauty.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="nb">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Marte Lilleberre">
+    <meta name="description"
+        content="Vellkommen til Fenty Norge. Her finner du informasjon om Rihannas varemerke Fenty Beauty">
+    <meta name="keywords" content="rihanna, fenty, fenty beauty, fenty skin, blog">
     <title>Fenty.no - Savage x Fenty</title>
     <link rel="stylesheet" href="/css/index.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -17,10 +21,12 @@
 
 <body>
 
-    <head>
+    <header>
         <div class="header-image">
             <!-- <img src="" alt=""> -->
-            <h1 class="site-name-placeholder">FENTY.NO</h1>
+            <a href="index.html">
+                <h1 class="site-name-placeholder">FENTY.NO</h1>
+            </a>
         </div>
         <div class="nav-container">
             <nav class="main-menu">
@@ -40,7 +46,7 @@
             </nav>
             <div class="hamburger-menu"><i class="fa-solid fa-bars fa-2xl" style="color: #FFF;"></i></div>
         </div>
-    </head>
+    </header>
     <main>
         <div class="contact-page-container">
             <img class="page-header-img" src="/img/idy93qupGb.jpeg">
