last validator fixes this time around
all errors and warnings gone.

--- a/about.html
+++ b/about.html
@@ -48,7 +48,8 @@
     </header>
     <main>
         <div class="main-content">
-            <img class="page-header-img" src="/img/324696_10150903940575790_1147385479_o.jpg">
+            <img class="page-header-img" src="/img/324696_10150903940575790_1147385479_o.jpg"
+                alt="Bilde av Rihanna og admin av siden">
             <div class="about-text">
                 <h1>FENTY.no - Hvem er bak?</h1>
                 <p>Fenty.no ble skapt i 2024, men jeg har tidligere vært med å drevet, det som den gang var, norges
@@ -91,7 +92,7 @@
         <div class="center-footer">
             <div class="copyright">
                 <p>Copyright berremarte.no 2024</p>
-                </p>All Rights Reserved</p>
+                <p>All Rights Reserved</p>
             </div>
         </div>
         <div class="right-footer"></div>
