--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
     </header>
     <main>
         <div class="contact-page-container">
-            <img class="page-header-img" src="/img/P10056222_2.avif">
+            <img class="page-header-img" src="/img/P10056222_2.avif" alt="bilde av Rihanna">
             <div class="about-text">
                 <h1>Lurer du på noe?</h1>
                 <p>Har du et spørsmål om Rihanna eller noe angående hennes merkervarer kan du sende meg en melding, så
@@ -102,7 +102,7 @@
         <div class="center-footer">
             <div class="copyright">
                 <p>Copyright berremarte.no 2024</p>
-                </p>All Rights Reserved</p>
+                <p>All Rights Reserved</p>
             </div>
         </div>
         <div class="right-footer"></div>
