--- a/discography.html
+++ b/discography.html
@@ -48,7 +48,7 @@
     </header>
     <main>
         <div class="contact-page-container">
-            <img class="page-header-img" src="/img/P10056222_2.avif">
+            <img class="page-header-img" src="/img/P10056222_2.avif" alt="bilde av Rihanna">
             <div class="about-text">
                 <h1>Rihannas musikk-katalog</h1>
                 <p>Litt om Rihannas katalog</p>
@@ -68,7 +68,7 @@
         <div class="center-footer">
             <div class="copyright">
                 <p>Copyright berremarte.no 2024</p>
-                </p>All Rights Reserved</p>
+                <p>All Rights Reserved</p>
             </div>
         </div>
         <div class="right-footer"></div>
