--- a/fenty-beauty.html
+++ b/fenty-beauty.html
@@ -49,7 +49,7 @@
     </header>
     <main>
         <div class="contact-page-container">
-            <img class="page-header-img" src="/img/idy93qupGb.jpeg">
+            <img class="page-header-img" src="/img/idy93qupGb.jpeg" alt="fenty beauty logo">
             <div class="about-text">
                 <h1>Fenty Beauty</h1>
                 <p>Litt om Fenty Beauty</p>
@@ -68,7 +68,7 @@
         <div class="center-footer">
             <div class="copyright">
                 <p>Copyright berremarte.no 2024</p>
-                </p>All Rights Reserved</p>
+                <p>All Rights Reserved</p>
             </div>
         </div>
         <div class="right-footer"></div>
