--- a/fenty-skin.html
+++ b/fenty-skin.html
@@ -49,7 +49,7 @@
     </header>
     <main>
         <div class="contact-page-container">
-            <img class="page-header-img" src="/img/fenty-skin-header.jpg">
+            <img class="page-header-img" src="/img/fenty-skin-header.jpg" alt="fenty skin logo">
             <div class="about-text">
                 <h1>Fenty Skin</h1>
                 <p>Litt om hudpleiemerket Fenty Skin</p>
@@ -68,7 +68,7 @@
         <div class="center-footer">
             <div class="copyright">
                 <p>Copyright berremarte.no 2024</p>
-                </p>All Rights Reserved</p>
+                <p>All Rights Reserved</p>
             </div>
         </div>
         <div class="right-footer"></div>
