--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <img src="/img/RIHANNAnm.jpg" alt="image of Rihanna">
             </div>
             <div class="center-site-info">
-                <img class="scroll-down" src="/img/skroll-ned.png">
+                <img class="scroll-down" src="/img/skroll-ned.png" alt="skroll ned på siden for nyheter">
                 <p class="center-site-info-header">Side Introduksjon</p>
                 <div class="horizontal-line"></div>
                 <p class="welcome">Velkommen til <b>FENTY Norge</b></p>
@@ -315,7 +315,7 @@
         <div class="center-footer">
             <div class="copyright">
                 <p>Copyright berremarte.no 2024</p>
-                </p>All Rights Reserved</p>
+                <p>All Rights Reserved</p>
             </div>
         </div>
         <div class="right-footer"></div>
