--- a/category.html
+++ b/category.html
@@ -69,7 +69,7 @@
         <div class="center-footer">
             <div class="copyright">
                 <p>Copyright berremarte.no 2024</p>
-                </p>All Rights Reserved</p>
+                <p>All Rights Reserved</p>
             </div>
         </div>
         <div class="right-footer"></div>
