--- a/savagex.html
+++ b/savagex.html
@@ -49,7 +49,7 @@
     </header>
     <main>
         <div class="contact-page-container">
-            <img class="page-header-img" src="/img/savagex-logo.jpg">
+            <img class="page-header-img" src="/img/savagex-logo.jpg" alt="savage x logo">
             <div class="about-text">
                 <h1>Savage X</h1>
                 <p>Litt om klesmerket SavageX</p>
@@ -68,7 +68,7 @@
         <div class="center-footer">
             <div class="copyright">
                 <p>Copyright berremarte.no 2024</p>
-                </p>All Rights Reserved</p>
+                <p>All Rights Reserved</p>
             </div>
         </div>
         <div class="right-footer"></div>
