--- a/discography.html
+++ b/discography.html
@@ -16,6 +16,17 @@
         rel="stylesheet">
     <script type="module" src="js/Pages.js/index.js"></script>
     <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
+    <!-- Hotjar Tracking Code for Fenty Norge -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 3857793, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
 </head>
 
 <body>
