--- a/index.html
+++ b/index.html
@@ -18,6 +18,17 @@
     <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
     <script type="module" src="js/fetchAPI/getPost.js"></script>
     <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
+    <!-- Hotjar Tracking Code for Fenty Norge -->
+    <script>
+        (function (h, o, t, j, a, r) {
+            h.hj = h.hj || function () { (h.hj.q = h.hj.q || []).push(arguments) };
+            h._hjSettings = { hjid: 3857793, hjsv: 6 };
+            a = o.getElementsByTagName('head')[0];
+            r = o.createElement('script'); r.async = 1;
+            r.src = t + h._hjSettings.hjid + j + h._hjSettings.hjsv;
+            a.appendChild(r);
+        })(window, document, 'https://static.hotjar.com/c/hotjar-', '.js?sv=');
+    </script>
 </head>
 
 <body>
@@ -104,133 +115,7 @@
             <div class="blog-content">
                 <div class="blog-posts-container">
                     <div class="loader">Loading..</div>
-                    <!-- <div class="blog-post">
-                    <a href="single-post.html">
-                        <div class="blog-post-header">
-                            <div class="blog-date">
-                                <h4>16.januar 2024</h4>
-                            </div>
-                            <div class="blog-post-header-img">
-                                <img src="/img/post-top-image.png">
-                            </div>
-                        </div>
-                        <div class="blog-post-content">
-                            <div class="blog-post-img-title">
-                                <img class="blog-post-main-img" src="/img/rih.jpeg.jpg">
-                                <h1 class="blog-post-title">RIHANNA DEBUTES NEW EYE PRODUCT</h1>
-                            </div>
-                            <p class="blog-post-text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean finibus justo orci,
-                                vitae
-                                placerat nulla aliquam vitae. Cras luctus vulputate malesuada. Integer pellentesque quam
-                                eu
-                                nulla suscipit fermentum. Maecenas a augue non nunc fringilla dignissim. Donec lacinia
-                                velit
-                                in tristique luctus. Aenean bibendum mattis lorem pretium finibus. Vestibulum at feugiat
-                                dui. Praesent in mi ut sem congue sollicitudin ut sed orci. Morbi quis tempus orci.
-                                Pellentesque varius risus in neque interdum, nec egestas dui molestie. Lorem ipsum dolor
-                                sit
-                                amet, consectetur adipiscing elit. Mauris eu mauris imperdiet arcu finibus lacinia.
-                                Suspendisse mauris ante, cursus eget faucibus at, dapibus in orci.
-                                Maecenas commodo pellentesque dolor vitae maximus. Nullam eget dolor eget neque
-                                fermentum
-                                semper et vel neque. Aenean interdum accumsan enim a maximus. Suspendisse potenti.
-                                Pellentesque aliquam, turpis eu elementum aliquam, tortor est </p>
-                        </div>
-                        <div class="blog-post-info">
-                            <div class="author">
-                                <p>Posted by: Marte</p>
-                            </div>
-                            <div class="dateandtime">
-                                <p>January 16th 2024 15:45</p>
-                            </div>
-                            <div class="comments">
-                                <p>5 comments</p>
-                            </div>
-                        </div>
-                </div>
-                </a>
-                <div class="blog-post">
-                    <div class="blog-post-header">
-                        <div class="blog-date">
-                            <h4>16.januar 2024</h4>
-                        </div>
-                        <div class="blog-post-header-img">
-                            <img src="/img/post-top-image-eyes.png">
-                        </div>
-                    </div>
-                    <div class="blog-post-content">
-                        <div class="blog-post-img-title">
-                            <img class="blog-post-main-img" src="/img/rih.jpeg.jpg">
-                            <h1 class="blog-post-title">RIHANNA DEBUTERER NYTT ØYE-PRODUKT</h1>
-                        </div>
-                        <p class="blog-post-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean finibus justo orci, vitae
-                            placerat nulla aliquam vitae. Cras luctus vulputate malesuada. Integer pellentesque quam eu
-                            nulla suscipit fermentum. Maecenas a augue non nunc fringilla dignissim. Donec lacinia velit
-                            in tristique luctus. Aenean bibendum mattis lorem pretium finibus. Vestibulum at feugiat
-                            dui. Praesent in mi ut sem congue sollicitudin ut sed orci. Morbi quis tempus orci.
-                            Pellentesque varius risus in neque interdum, nec egestas dui molestie. Lorem ipsum dolor sit
-                            amet, consectetur adipiscing elit. Mauris eu mauris imperdiet arcu finibus lacinia.
-                            Suspendisse mauris ante, cursus eget faucibus at, dapibus in orci.
-                            Maecenas commodo pellentesque dolor vitae maximus. Nullam eget dolor eget neque fermentum
-                            semper et vel neque. Aenean interdum accumsan enim a maximus. Suspendisse potenti.
-                            Pellentesque aliquam, turpis eu elementum aliquam, tortor est </p>
-                    </div>
-                    <div class="blog-post-info">
-                        <div class="author">
-                            <p>Posted by: Marte</p>
-                        </div>
-                        <div class="dateandtime">
-                            <p>January 16th 2024 15:45</p>
-                        </div>
-                        <div class="comments">
-                            <p>5 comments</p>
-                        </div>
-                    </div>
-                </div>
 
-
-                <div class="blog-post">
-                    <div class="blog-post-header">
-                        <div class="blog-date">
-                            <h4>16.januar 2024</h4>
-                        </div>
-                        <div class="blog-post-header-img">
-                            <img src="/img/post-top-image-eyes.png">
-                        </div>
-                    </div>
-                    <div class="blog-post-content">
-                        <div class="blog-post-img-title">
-                            <img class="blog-post-main-img" src="/img/rih.jpeg.jpg">
-                            <h1 class="blog-post-title">RIHANNA DEBUTERER NYTT ØYE-PRODUKT</h1>
-                        </div>
-                        <p class="blog-post-text">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean finibus justo orci, vitae
-                            placerat nulla aliquam vitae. Cras luctus vulputate malesuada. Integer pellentesque quam eu
-                            nulla suscipit fermentum. Maecenas a augue non nunc fringilla dignissim. Donec lacinia velit
-                            in tristique luctus. Aenean bibendum mattis lorem pretium finibus. Vestibulum at feugiat
-                            dui. Praesent in mi ut sem congue sollicitudin ut sed orci. Morbi quis tempus orci.
-                            Pellentesque varius risus in neque interdum, nec egestas dui molestie. Lorem ipsum dolor sit
-                            amet, consectetur adipiscing elit. Mauris eu mauris imperdiet arcu finibus lacinia.
-                            Suspendisse mauris ante, cursus eget faucibus at, dapibus in orci.
-                            Maecenas commodo pellentesque dolor vitae maximus. Nullam eget dolor eget neque fermentum
-                            semper et vel neque. Aenean interdum accumsan enim a maximus. Suspendisse potenti.
-                            Pellentesque aliquam, turpis eu elementum aliquam, tortor est </p>
-                    </div>
-                    <div class="blog-post-info">
-                        <div class="author">
-                            <p>Posted by: Marte</p>
-                        </div>
-                        <div class="dateandtime">
-                            <p>January 16th 2024 15:45</p>
-                        </div>
-                        <div class="comments">
-                            <p>5 comments</p>
-                        </div>
-                    </div>
-
-                </div> -->
                 </div>
                 <div class="load-more-section">
                     <p class="load-more load-more-link">Last inn flere innlegg</p>
