--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="nav-container">
             <nav class="main-menu">
                 <ul>
-                    <li class="active"><a href="index.html">HJEM</a></li>
+                    <li><a href="index.html">HJEM</a></li>
                     <li><a href="about.html">OM OSS</a></li>
                     <li class="sub-menu-start"><a href="#">VAREMERKER</a>
                         <ul class="sub-menu">
