styling changes and comments
working on styling changes, and added number of comments to blog post list

--- a/category.html
+++ b/category.html
@@ -34,11 +34,11 @@
 
     <header>
         <div class="header-image">
-            <!-- <img src="img/header-image-2.png" alt="fenty.no"> -->
             <a href="index.html">
-                <h1 class="site-name-placeholder">FENTY.NO</h1>
+                <img src="img/logo-white.png" alt="fenty site logo">
             </a>
-            <p>Få de aller siste nyhetene on Rihannas utgivelser</p>
+            <!-- <h1 class="site-name-placeholder">FENTY.NO</h1>
+            <p>Få de aller siste nyhetene on Rihannas utgivelser</p> -->
         </div>
         <div class="nav-container">
             <nav class="main-menu">
