--- a/index.html
+++ b/index.html
@@ -35,16 +35,18 @@
 
     <header>
         <div class="header-image">
-            <!-- <img src="img/header-image-2.png" alt="fenty.no"> -->
-            <h1 class="site-name-placeholder">FENTY.NO</h1>
-            <p>Få de aller siste nyhetene on Rihannas utgivelser</p>
+            <a href="index.html">
+                <img src="img/logo-white.png" alt="fenty site logo">
+            </a>
+            <!-- <h1 class="site-name-placeholder">FENTY.NO</h1>
+            <p>Få de aller siste nyhetene on Rihannas utgivelser</p> -->
         </div>
         <div class="nav-container">
             <nav class="main-menu">
                 <ul>
                     <li><a href="index.html">HJEM</a></li>
                     <li><a href="about.html">OM OSS</a></li>
-                    <li class="sub-menu-start"><a href="#">VAREMERKER</a>
+                    <li class="sub-menu-start">VAREMERKER
                         <ul class="sub-menu">
                             <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
                             <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
@@ -126,7 +128,7 @@
                 <div class="filter-posts">
                     <img src="/img/instagram-header.png" alt="image of Rihanna">
                     <h2>Filtrer Innlegg:</h2>
-                    <div class="horizontal-line"></div>
+                    <!-- <div class="horizontal-line"></div> -->
                     <div class="filter-posts-by">
                         <label for="filter-posts-by">Velg kategori:</label>
                         <div class="option-inputs">
@@ -152,31 +154,19 @@
                 <div class="newest-posts">
                     <!-- <img src="/img/instagram-header.png"> -->
                     <h2>Nyeste innlegg</h2>
-                    <div class="horizontal-line"></div>
+                    <!-- <div class="horizontal-line"></div> -->
                     <div class="new-blog-post-list">
                         <ul>
-                            <!--
-                            <li>Dette er den nyeste posten</li>
-                            <p class="read-more">Les mer</p>
-                            <li>Dette er den nest nyeste posten</li>
-                            <p class="read-more">Les mer</p>
-                            <li>Dette er den tredje posten</li>
-                            <p class="read-more">Les mer</p>
-                            <li>Dette er den fjerde nyeste posten</li>
-                            <p class="read-more">Les mer</p>
-                        -->
+
                         </ul>
                     </div>
                 </div>
                 <div class="newest-comments">
                     <!-- <img src="/img/instagram-header.png"> -->
-                    <h2>Siste kommentarer</h2>
-                    <div class="horizontal-line"></div>
+                    <h2>Nye kommentarer</h2>
+                    <!-- <div class="horizontal-line"></div> -->
                     <ul>
-                        <!-- <li>Dette er den nyeste kommentaren</li>
-                            <li>Dette er den nest nyeste kommentaren</li>
-                            <li>Dette er den tredje kommentaren</li>
-                            <li>Dette er den fjerde nyeste kommentaren</li> -->
+
                     </ul>
                 </div>
                 <!-- <div class="newest-instagram">
@@ -189,22 +179,33 @@
         </div>
     </main>
     <footer>
-        <div class="left-footer">
-            <div class="footer-menu">
-                <ul>
-                    <li>
-                    </li>
-                </ul>
+        <div class="footer-content">
+            <div class="left-footer">
+                <div class="footer-menu">
+                    <p>Kjøp Fenty fra butikker uten toll:</p>
+                    <ul>
+                        <li>Fredrikoglouisa.no</li>
+                        <li>Sephora.se</li>
+                        <li>eu.Puma.com</li>
+                        <li>Fentybeauty.com</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="center-footer">
+                <div class="copyright">
+                    <p>Copyright berremarte.no 2024</p>
+                    <p>All Rights Reserved</p>
+                </div>
+            </div>
+            <div class="right-footer">
+                <p>Følg oss</p>
+                <div class="social-media">
+                    <div class="instagram"><a href="https://instagram.com/fentynorge"><i
+                                class="fa-brands fa-instagram fa-2xl"></i></a></div>
+                    <div class="facebook"><i class="fa-brands fa-facebook fa-2xl"></i></div>
+                </div>
             </div>
         </div>
-        <div class="center-footer">
-            <div class="copyright">
-                <p>Copyright berremarte.no 2024</p>
-                <p>All Rights Reserved</p>
-            </div>
-        </div>
-        <div class="right-footer"></div>
-
     </footer>
 </body>
 
