--- a/savagex.html
+++ b/savagex.html
@@ -34,10 +34,11 @@
 
     <header>
         <div class="header-image">
-            <!-- <img src="" alt=""> -->
             <a href="index.html">
-                <h1 class="site-name-placeholder">FENTY.NO</h1>
+                <img src="img/logo-white.png" alt="fenty site logo">
             </a>
+            <!-- <h1 class="site-name-placeholder">FENTY.NO</h1>
+            <p>Få de aller siste nyhetene on Rihannas utgivelser</p> -->
         </div>
         <div class="nav-container">
             <nav class="main-menu">
@@ -62,8 +63,23 @@
         <div class="contact-page-container">
             <img class="page-header-img" src="/img/savagex-logo.jpg" alt="savage x logo">
             <div class="about-text">
-                <h1>Savage X</h1>
-                <p>Litt om klesmerket SavageX</p>
+                <h1>Om SavageX</h1>
+                <p>Fra SavageX.com: Savage X Fenty har forstyrret undertøysindustrien og omdefinert "sexy". Med
+                    tilgjengelige prispunkter og et omfattende utvalg av mote-fremover stiler, feirer merket
+                    fryktløshet, selvtillit og inkludering. Fra dagligdagse stifter til provoserende stykker, Savage X
+                    Fenty har noe for enhver stemning, enhver humør og enhver KROPP.</p>
+                <p>Hjemmesiden ble lansert 11.mai 2018, sammen med en pop-up butikk i Brooklyn, New York. I senere tid
+                    har SavageX åpnet permenante butikker. Disse ligger alle i USA, i byene: Las Vegas, Los Angeles,
+                    Houston, Philadelphia og Washington.</p>
+                <p>Fra SavageX.com: "Vi ønsker å få folk til å se bra ut og føle seg bra," forklarer Rihanna, som
+                    henvender seg til
+                    Savage X Fenty med samme mentalitet som hun gjør alle prosjektene hennes - for å lage noe nytt og
+                    friskt som alle kan forholde seg til og føle seg komfortable i. "Vi vil at du skal føle deg sexy og
+                    ha
+                    det gøy mens du gjør det." Fra dagligdagse ting og mer provoserende plagg, herreundertøy og nattøy,
+                    til
+                    forhøyede loungewear og sportsklær – Savage X Fenty har noe for ethvert humør.</p>
+                <p>Merket er et sammarbeid mellom Rihanna og TechStyle Fashion Group.</p>
             </div>
         </div>
     </main>
