--- a/fenty-beauty.html
+++ b/fenty-beauty.html
@@ -34,10 +34,11 @@
 
     <header>
         <div class="header-image">
-            <!-- <img src="" alt=""> -->
             <a href="index.html">
-                <h1 class="site-name-placeholder">FENTY.NO</h1>
+                <img src="img/logo-white.png" alt="fenty site logo">
             </a>
+            <!-- <h1 class="site-name-placeholder">FENTY.NO</h1>
+            <p>Få de aller siste nyhetene on Rihannas utgivelser</p> -->
         </div>
         <div class="nav-container">
             <nav class="main-menu">
