--- a/category.html
+++ b/category.html
@@ -69,22 +69,33 @@
 
     </main>
     <footer>
-        <div class="left-footer">
-            <div class="footer-menu">
-                <ul>
-                    <li>
-                    </li>
-                </ul>
+        <div class="footer-content">
+            <div class="left-footer">
+                <div class="footer-menu">
+                    <p>Kjøp Fenty fra butikker uten toll:</p>
+                    <ul>
+                        <li>Fredrikoglouisa.no</li>
+                        <li>Sephora.se</li>
+                        <li>eu.Puma.com</li>
+                        <li>Fentybeauty.com</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="center-footer">
+                <div class="copyright">
+                    <p>Copyright berremarte.no 2024</p>
+                    <p>All Rights Reserved</p>
+                </div>
+            </div>
+            <div class="right-footer">
+                <p>Følg oss</p>
+                <div class="social-media">
+                    <div class="instagram"><a href="https://instagram.com/fentynorge"><i
+                                class="fa-brands fa-instagram fa-2xl"></i></a></div>
+                    <div class="facebook"><i class="fa-brands fa-facebook fa-2xl"></i></div>
+                </div>
             </div>
         </div>
-        <div class="center-footer">
-            <div class="copyright">
-                <p>Copyright berremarte.no 2024</p>
-                <p>All Rights Reserved</p>
-            </div>
-        </div>
-        <div class="right-footer"></div>
-
     </footer>
 </body>
 
