--- a/discography.html
+++ b/discography.html
@@ -15,6 +15,7 @@
         href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&family=Inter:wght@100;200;300;400;500;600;700&family=Open+Sans:ital,wght@0,400;0,600;0,700;1,400&display=swap"
         rel="stylesheet">
     <script type="module" src="js/Pages.js/index.js"></script>
+    <script type="module" src="js/components/mainMenu.js"></script>
     <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
     <!-- Hotjar Tracking Code for Fenty Norge -->
     <script>
@@ -44,7 +45,7 @@
                 <ul>
                     <li><a href="index.html">HJEM</a></li>
                     <li><a href="about.html">OM OSS</a></li>
-                    <li class="sub-menu-start"><a href="#">VAREMERKER</a>
+                    <li class="sub-menu-start"><a href="#" aria-haspopup="true" aria-expanded="false">VAREMERKER</a>
                         <ul class="sub-menu">
                             <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
                             <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
