--- a/fenty-beauty.html
+++ b/fenty-beauty.html
@@ -17,6 +17,7 @@
         rel="stylesheet">
     <script src="https://kit.fontawesome.com/1664c6557b.js" crossorigin="anonymous"></script>
     <script type="module" src="js/Pages.js/index.js"></script>
+    <script type="module" src="js/components/mainMenu.js"></script>
     <!-- Hotjar Tracking Code for Fenty Norge -->
     <script>
         (function (h, o, t, j, a, r) {
@@ -45,7 +46,7 @@
                 <ul>
                     <li><a href="index.html">HJEM</a></li>
                     <li><a href="about.html">OM OSS</a></li>
-                    <li class="sub-menu-start"><a href="#">VAREMERKER</a>
+                    <li class="sub-menu-start"><a href="#" aria-haspopup="true" aria-expanded="false">VAREMERKER</a>
                         <ul class="sub-menu">
                             <li class="active"><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
                             <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
