menu icon added
added an icon in the menu for the drop down menu

--- a/savagex.html
+++ b/savagex.html
@@ -46,7 +46,8 @@
                 <ul>
                     <li><a href="index.html">HJEM</a></li>
                     <li><a href="about.html">OM OSS</a></li>
-                    <li class="sub-menu-start"><a href="#" aria-haspopup="true" aria-expanded="false">VAREMERKER</a>
+                    <li class="sub-menu-start"><a href="#" aria-haspopup="true" aria-expanded="false">VAREMERKER
+                            &#11206;</a>
                         <ul class="sub-menu">
                             <li><a href="fenty-beauty.html">-FEИTY BEAUTY</a></li>
                             <li><a href="fenty-skin.html">-FENTY SKIN</a></li>
@@ -90,10 +91,11 @@
                 <div class="footer-menu">
                     <p>Kjøp Fenty fra butikker uten toll:</p>
                     <ul>
-                        <li>Fredrikoglouisa.no</li>
-                        <li>Sephora.se</li>
-                        <li>eu.Puma.com</li>
-                        <li>Fentybeauty.com</li>
+                        <li><a href="https://fredrikoglouisa.no/sokeresultater/?searchterm=fenty">Fredrikoglouisa.no</a>
+                        </li>
+                        <li><a href="https://www.sephora.se/sok/?q=fenty">Sephora.se</a></li>
+                        <li><a href="https://eu.puma.com/no/en/fenty-x-puma">eu.Puma.com</a></li>
+                        <li><a href="https://fentybeauty.com">Fentybeauty.com</a></li>
                     </ul>
                 </div>
             </div>
