small styling changes
Changed some images styling. added videos and info to brand pages

--- a/fenty-skin.html
+++ b/fenty-skin.html
@@ -63,10 +63,22 @@
     </header>
     <main>
         <div class="contact-page-container">
-            <img class="page-header-img" src="/img/fenty-skin-header.jpg" alt="fenty skin logo">
+            <img class="page-header-img" src="/img/fenty-skin-banner.jpg" alt="fenty skin logo">
             <div class="about-text">
                 <h1>Fenty Skin</h1>
-                <p>Litt om hudpleiemerket Fenty Skin</p>
+                <h2>Det er den smarte hudpleien med et klart oppdrag: behandle, glatte ut og stramme utseendet til
+                    porene, dag og natt, under sminke og over tid. Det er høyytelses hudpleie for alle hudtyper –
+                    designet for deg, meg og vi.</h2>
+                <div class="brand-quick-info">
+                    <p>Lansert USA: 2020</p>
+                    <p>Lansert Norge: 2021</p>
+                    <p>CEO: Robyn Rihanna Fenty</p>
+                    <p>Hjemmeside: <a href="https://www.fentyskin.com">www.fentyskin.com</a></p>
+                </div>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/aP0IYMwOZ8U?si=OmqC7LbFVculmGSX"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
     </main>
