--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <img src="/img/RIHANNAnm.jpg" alt="image of Rihanna">
             </div>
             <div class="center-site-info">
-                <img class="scroll-down" src="/img/skroll-ned.png" alt="skroll ned på siden for nyheter">
+                <img class="scroll-down" src="/img/skroll-ned-ny.png" alt="skroll ned på siden for nyheter">
                 <p class="center-site-info-header">Side Introduksjon</p>
                 <div class="horizontal-line"></div>
                 <p class="welcome">Velkommen til <b>FENTY Norge</b></p>
@@ -204,7 +204,7 @@
                 <div class="social-media">
                     <div class="instagram"><a href="https://instagram.com/fentynorge"><i
                                 class="fa-brands fa-instagram fa-2xl"></i></a></div>
-                    <div class="facebook"><i class="fa-brands fa-facebook fa-2xl"></i></div>
+                    <div class="twitetr"><i class="fa-brands fa-x-twitter fa-2xl"></i></div>
                 </div>
             </div>
         </div>
