--- a/savagex.html
+++ b/savagex.html
@@ -63,13 +63,19 @@
     </header>
     <main>
         <div class="contact-page-container">
-            <img class="page-header-img" src="/img/savagex-logo.jpg" alt="savage x logo">
+            <img class="page-header-img" src="/img/savagex-banner.jpg" alt="savage x logo">
             <div class="about-text">
                 <h1>Om SavageX</h1>
-                <p>Fra SavageX.com: Savage X Fenty har forstyrret undertøysindustrien og omdefinert "sexy". Med
+                <h2>Savage X Fenty har forstyrret undertøysindustrien og omdefinert "sexy". Med
                     tilgjengelige prispunkter og et omfattende utvalg av mote-fremover stiler, feirer merket
                     fryktløshet, selvtillit og inkludering. Fra dagligdagse stifter til provoserende stykker, Savage X
-                    Fenty har noe for enhver stemning, enhver humør og enhver KROPP.</p>
+                    Fenty har noe for enhver stemning, enhver humør og enhver KROPP.</h2>
+                <div class="brand-quick-info">
+                    <p>Lansert USA: 2018</p>
+                    <p>CEO: Hillary Super, etter Robyn Rihanna Fenty gikk av i 2023</p>
+                    <p>Hjemmeside: <a href="https://www.savagex.com">www.SavageX.com</a></p>
+                </div>
+
                 <p>Hjemmesiden ble lansert 11.mai 2018, sammen med en pop-up butikk i Brooklyn, New York. I senere tid
                     har SavageX åpnet permenante butikker. Disse ligger alle i USA, i byene: Las Vegas, Los Angeles,
                     Houston, Philadelphia og Washington.</p>
@@ -82,6 +88,10 @@
                     til
                     forhøyede loungewear og sportsklær – Savage X Fenty har noe for ethvert humør.</p>
                 <p>Merket er et sammarbeid mellom Rihanna og TechStyle Fashion Group.</p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/I1bIJuM6iJs?si=-pPhS7qy-Jhr2XZM"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
     </main>
