--- a/fenty-beauty.html
+++ b/fenty-beauty.html
@@ -63,10 +63,34 @@
     </header>
     <main>
         <div class="contact-page-container">
-            <img class="page-header-img" src="/img/idy93qupGb.jpeg" alt="fenty beauty logo">
+            <img class="page-header-img" src="/img/fenty-beauty-banner.jpg" alt="fenty beauty logo">
             <div class="about-text">
                 <h1>Fenty Beauty</h1>
-                <p>Litt om Fenty Beauty</p>
+                <h2>Skapt av Rihanna med hennes vision som alltid er forut for sin tid, Fenty Beauty redefinerer reglene
+                    med lett-som-luft formulaer som elsker å bli lagt i lag -i en global lineup av nyanser designet for
+                    alle.</h2>
+                <div class="brand-quick-info">
+                    <p>Lansert USA: 2017</p>
+                    <p>Lansert Norge: 2021</p>
+                    <p>CEO: Robyn Rihanna Fenty</p>
+                    <p>Hjemmeside: <a href="https://www.fentybeauty.com">www.fentybeauty.com</a></p>
+                </div>
+                <p>Fenty Beauty tok markedet med storm og ble raskt en storselger, dette hadde nok mye med det faktum at
+                    merket ville skape noe for alle. Inklusiviteten med 40 foundation nyanser ved lansering fylte
+                    et stort hull i kosmetikk bransjen.</p>
+
+                <p>20. januar 2021 sendte jeg Rihanna en pm på instagram der jeg skrev
+                <blockquote>"Just a friendly reminder that Norway doesn't have Sephora and our import charges are crazy
+                    so this bitch be broke from buying Fenty Beauty/skin/savagex. FENTY doesn't ship here either so
+                    helpp".</blockquote> Som hun noen dager senere responderte på med <blockquote>"Lolol I gotchu sis"
+                </blockquote>
+                Og jammen var hun på saken, for i mai samme år, nærmere bestemt 27.mai, lanserte Rihanna sine merker
+                Fenty Beauty og Fenty Skin hos Fredrik & Louisa her i landet.
+                </p>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/R6FghvQoz9Y?si=8Y89xQTIPJJvkoa0"
+                    title="YouTube video player" frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen></iframe>
             </div>
         </div>
     </main>
