--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                     <div class="left-arrow .disabled-arrow">
                         <img src="/img/icons/arrow-left.png" alt="arrow left">
                     </div>
-                    <div class="new-blog-post-carousel"></div>
+                    <div class="new-blog-post-carousel">
+                        <div class="loader"></div>
+                    </div>
                     <div class="right-arrow .disabled-arrow">
                         <img src="/img/icons/arrow-right.png" alt="arrow rigth">
                     </div>
@@ -117,7 +119,7 @@
         <div class="blog-and-sidebar">
             <div class="blog-content">
                 <div class="blog-posts-container">
-                    <div class="loader">Loading..</div>
+                    <span class="loader"></span>
 
                 </div>
                 <div class="load-more-section">
@@ -153,21 +155,18 @@
                     <input type="search" id="searchbar" name="searchbar" placeholder="Søk i innlegg..">
                 </div> -->
                 <div class="newest-posts">
-                    <!-- <img src="/img/instagram-header.png"> -->
                     <h2>Nyeste innlegg</h2>
-                    <!-- <div class="horizontal-line"></div> -->
                     <div class="new-blog-post-list">
                         <ul>
-
+                            <div class="loader"></div>
                         </ul>
                     </div>
                 </div>
                 <div class="newest-comments">
-                    <!-- <img src="/img/instagram-header.png"> -->
                     <h2>Nye kommentarer</h2>
-                    <!-- <div class="horizontal-line"></div> -->
-                    <ul>
 
+                    <ul>
+                        <div class="loader"></div>
                     </ul>
                 </div>
                 <!-- <div class="newest-instagram">
